tests/snapshots/test_runner__tests__compiler__typecheck__enum_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum List<Element> =
  Nil
  Cons({
    current: Element
    next: List<Element Element>
  })

let foo = | Cons({
  current 1
  next Cons({
    current true
    next Nil
  })
}) => 0

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/enum_2.kk:11:13
   │
11 │     current true
   │             ^^^^ Type mismatch
   │
   = +---------------+-------------+
     | EXPECTED TYPE | ACTUAL TYPE |
     +---------------+-------------+
     | - Integer     | + Boolean   |
     +---------------+-------------+
